[metadata]
name = solar_datasets
author = Steven D. Christe
author_email = steven.christe@nasa.gov
license = BSD 3-Clause
license_file = LICENSE.rst
url = http://github.com/ehsteve/solar_datasets/
description = A collection of canonical solar datasets.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires = sunpy



[options.extras_require]
test =
    pytest
    pytest-astropy
    pytest-cov
docs =
    sphinx
    sphinx-automodapi
    towncrier

    sunpy-sphinx-theme


[options.package_data]
solar_datasets = data/*

[tool:pytest]
testpaths = "solar_datasets" "docs"
doctest_plus = enabled
text_file_format = rst
addopts = --doctest-rst
remote_data_strict = True

[coverage:run]
omit =
  solar_datasets/_sunpy_init*
  solar_datasets/conftest.py
  solar_datasets/*setup_package*
  solar_datasets/tests/*
  solar_datasets/*/tests/*
  solar_datasets/extern/*
  solar_datasets/version*
  */solar_datasets/_sunpy_init*
  */solar_datasets/conftest.py
  */solar_datasets/*setup_package*
  */solar_datasets/tests/*
  */solar_datasets/*/tests/*
  */solar_datasets/extern/*
  */solar_datasets/version*

[coverage:report]
exclude_lines =
  # Have to re-enable the standard pragma
  pragma: no cover
  # Don't complain about packages we have installed
  except ImportError
  # Don't complain if tests don't hit assertions
  raise AssertionError
  raise NotImplementedError
  # Don't complain about script hooks
  def main\(.*\):
  # Ignore branches that don't pertain to this version of Python
  pragma: py{ignore_python_version}
  # Don't complain about IPython completion helper
  def _ipython_key_completions_
